@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021 Alex Laird
+ * Copyright (c) 2023 Alex Laird
  *
  * Permission is hereby granted, free of charge, to any person obtaining
  * a copy of this software and associated documentation files (the
@@ -23,9 +23,10 @@
 
 package com.github.alexdlaird.ngrok;
 
-import com.github.alexdlaird.exception.JavaNgrokHTTPException;
+import com.github.alexdlaird.exception.JavaNgrokException;
 import com.github.alexdlaird.http.Response;
 import com.github.alexdlaird.ngrok.conf.JavaNgrokConfig;
+import com.github.alexdlaird.ngrok.installer.NgrokVersion;
 import com.github.alexdlaird.ngrok.process.NgrokProcess;
 import com.github.alexdlaird.ngrok.protocol.BindTls;
 import com.github.alexdlaird.ngrok.protocol.CreateTunnel;
@@ -42,14 +43,11 @@ import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Collections;
-import java.util.HashMap;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static com.github.alexdlaird.util.StringUtils.isNotBlank;
-import static java.net.HttpURLConnection.HTTP_BAD_GATEWAY;
 import static org.hamcrest.CoreMatchers.startsWith;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.greaterThan;
@@ -59,47 +57,57 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
 class NgrokClientTest extends NgrokTestCase {
 
-    private NgrokClient ngrokClient;
+    private NgrokClient ngrokClientV2;
+
+    private NgrokClient ngrokClientV3;
 
     @BeforeEach
     public void setUp() {
         super.setUp();
 
-        ngrokClient = new NgrokClient.Builder()
-                .withJavaNgrokConfig(javaNgrokConfig)
-                .withNgrokProcess(ngrokProcess)
+        ngrokClientV2 = new NgrokClient.Builder()
+                .withJavaNgrokConfig(javaNgrokConfigV2)
+                .withNgrokProcess(ngrokProcessV2)
+                .build();
+        ngrokClientV3 = new NgrokClient.Builder()
+                .withJavaNgrokConfig(javaNgrokConfigV3)
+                .withNgrokProcess(ngrokProcessV3)
                 .build();
     }
 
     @Test
     public void testGetters() {
         // THEN
-        assertEquals(javaNgrokConfig, ngrokClient.getJavaNgrokConfig());
-        assertEquals(ngrokProcess, ngrokClient.getNgrokProcess());
-        assertEquals(ngrokInstaller, ngrokClient.getNgrokProcess().getNgrokInstaller());
-        assertNotNull(ngrokClient.getHttpClient());
+        assertEquals(javaNgrokConfigV3, ngrokClientV3.getJavaNgrokConfig());
+        assertEquals(ngrokProcessV3, ngrokClientV3.getNgrokProcess());
+        assertEquals(ngrokInstaller, ngrokClientV3.getNgrokProcess().getNgrokInstaller());
+        assertNotNull(ngrokClientV3.getHttpClient());
     }
 
     @Test
-    public void testConnect() {
+    public void testConnectV2() {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
-        assertFalse(ngrokClient.getNgrokProcess().isRunning());
+        assertFalse(ngrokProcessV2.isRunning());
         final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V2)
                 .withAddr(5000)
                 .build();
 
         // WHEN
-        final Tunnel tunnel = ngrokClient.connect(createTunnel);
+        final Tunnel tunnel = ngrokClientV2.connect(createTunnel);
 
         // THEN
-        assertTrue(ngrokClient.getNgrokProcess().isRunning());
+        assertTrue(ngrokClientV2.getNgrokProcess().getVersion().startsWith("2"));
+        assertTrue(ngrokClientV2.getNgrokProcess().isRunning());
+        assertNull(tunnel.getId());
         assertThat(tunnel.getName(), startsWith("http-5000-"));
         assertEquals("http", tunnel.getProto());
         assertEquals("http://localhost:5000", tunnel.getConfig().getAddr());
@@ -120,19 +128,56 @@ class NgrokClientTest extends NgrokTestCase {
     }
 
     @Test
+    public void testConnectV3() {
+        // GIVEN
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+        assertFalse(ngrokClientV3.getNgrokProcess().isRunning());
+        final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V3)
+                .withAddr(5000)
+                .build();
+
+        // WHEN
+        final Tunnel tunnel = ngrokClientV3.connect(createTunnel);
+
+        // THEN
+        assertTrue(ngrokClientV3.getNgrokProcess().getVersion().startsWith("3"));
+        assertTrue(ngrokClientV3.getNgrokProcess().isRunning());
+        assertNotNull(tunnel.getId());
+        assertThat(tunnel.getName(), startsWith("http-5000-"));
+        assertEquals("https", tunnel.getProto());
+        assertEquals("http://localhost:5000", tunnel.getConfig().getAddr());
+        assertTrue(tunnel.getConfig().isInspect());
+        assertNotNull(tunnel.getPublicUrl());
+        assertThat(tunnel.getPublicUrl(), startsWith("https://"));
+        assertNotNull(tunnel.getMetrics());
+        assertThat(tunnel.getMetrics(), hasKey("conns"));
+        assertEquals(0, tunnel.getMetrics().get("conns").getCount());
+        assertEquals(0, tunnel.getMetrics().get("conns").getGauge());
+        assertEquals(0, tunnel.getMetrics().get("conns").getP50());
+        assertEquals(0, tunnel.getMetrics().get("conns").getP90());
+        assertEquals(0, tunnel.getMetrics().get("conns").getP95());
+        assertEquals(0, tunnel.getMetrics().get("conns").getP99());
+        assertEquals(0, tunnel.getMetrics().get("conns").getRate1());
+        assertEquals(0, tunnel.getMetrics().get("conns").getRate5());
+        assertEquals(0, tunnel.getMetrics().get("conns").getRate15());
+    }
+
+    @Test
     public void testConnectName() {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
         final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V3)
                 .withName("my-tunnel")
                 .build();
 
         // WHEN
-        final Tunnel tunnel = ngrokClient.connect(createTunnel);
+        final Tunnel tunnel = ngrokClientV3.connect(createTunnel);
 
         // THEN
-        assertThat(tunnel.getName(), startsWith("my-tunnel (http)"));
-        assertEquals("http", tunnel.getProto());
+        assertThat(tunnel.getName(), startsWith("my-tunnel"));
+        assertEquals("https", tunnel.getProto());
         assertEquals("http://localhost:80", tunnel.getConfig().getAddr());
     }
 
@@ -140,35 +185,30 @@ class NgrokClientTest extends NgrokTestCase {
     public void testGetTunnels() {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
-        final Tunnel tunnel = ngrokClient.connect();
+        final Tunnel tunnel = ngrokClientV3.connect();
 
         // WHEN
-        final List<Tunnel> tunnels = ngrokClient.getTunnels();
+        final List<Tunnel> tunnels = ngrokClientV3.getTunnels();
 
         // THEN
-        assertEquals(2, tunnels.size());
-        for (final Tunnel t : tunnels) {
-            if (t.getProto().equals("http")) {
-                assertEquals(tunnel.getPublicUrl(), t.getPublicUrl());
-            } else {
-                assertEquals("https", t.getProto());
-                assertEquals(tunnel.getPublicUrl().replace("http", "https"), t.getPublicUrl());
-            }
-            assertEquals("http://localhost:80", t.getConfig().getAddr());
-        }
+        assertEquals(1, tunnels.size());
+        assertEquals("https", tunnels.get(0).getProto());
+        assertEquals(tunnel.getPublicUrl(), tunnels.get(0).getPublicUrl());
+        assertEquals("http://localhost:80", tunnels.get(0).getConfig().getAddr());
     }
 
     @Test
-    public void testConnectBindTlsBoth() {
+    public void testConnectBindTlsBothV2() {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
         final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V2)
                 .withBindTls(BindTls.BOTH)
                 .build();
-        final Tunnel tunnel = ngrokClient.connect(createTunnel);
+        final Tunnel tunnel = ngrokClientV2.connect(createTunnel);
 
         // WHEN
-        final List<Tunnel> tunnels = ngrokClient.getTunnels();
+        final List<Tunnel> tunnels = ngrokClientV2.getTunnels();
 
         // THEN
         assertEquals(2, tunnels.size());
@@ -176,16 +216,17 @@ class NgrokClientTest extends NgrokTestCase {
     }
 
     @Test
-    public void testConnectBindTlsHttpsOnly() {
+    public void testConnectBindTlsHttpsOnlyV2() {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
         final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V2)
                 .withBindTls(true)
                 .build();
-        final Tunnel tunnel = ngrokClient.connect(createTunnel);
+        final Tunnel tunnel = ngrokClientV2.connect(createTunnel);
 
         // WHEN
-        final List<Tunnel> tunnels = ngrokClient.getTunnels();
+        final List<Tunnel> tunnels = ngrokClientV2.getTunnels();
 
         // THEN
         assertEquals(1, tunnels.size());
@@ -193,16 +234,17 @@ class NgrokClientTest extends NgrokTestCase {
     }
 
     @Test
-    public void testConnectBindTlsHttpOnly() {
+    public void testConnectBindTlsHttpOnlyV2() {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
         final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V2)
                 .withBindTls(false)
                 .build();
-        final Tunnel tunnel = ngrokClient.connect(createTunnel);
+        final Tunnel tunnel = ngrokClientV2.connect(createTunnel);
 
         // WHEN
-        final List<Tunnel> tunnels = ngrokClient.getTunnels();
+        final List<Tunnel> tunnels = ngrokClientV2.getTunnels();
 
         // THEN
         assertEquals(1, tunnels.size());
@@ -210,28 +252,135 @@ class NgrokClientTest extends NgrokTestCase {
     }
 
     @Test
-    public void testDisconnect() {
+    public void testConnectSchemesHttpV3() {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
         final CreateTunnel createTunnel = new CreateTunnel.Builder()
-                .withName("my-tunnel")
-                .withBindTls(true)
+                .withNgrokVersion(NgrokVersion.V3)
+                .withSchemes(List.of("http"))
                 .build();
-        final Tunnel tunnel = ngrokClient.connect(createTunnel);
-        assertTrue(ngrokClient.getNgrokProcess().isRunning());
+        final Tunnel tunnel = ngrokClientV3.connect(createTunnel);
 
         // WHEN
-        ngrokClient.disconnect(tunnel.getPublicUrl());
+        final List<Tunnel> tunnels = ngrokClientV3.getTunnels();
 
         // THEN
-        final List<Tunnel> tunnels = ngrokClient.getTunnels();
+        assertEquals(1, tunnels.size());
+        assertThat(tunnel.getPublicUrl(), startsWith("http://"));
+    }
+
+    @Test
+    public void testConnectSchemesHttpsV3() {
+        // GIVEN
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+        final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V3)
+                .withSchemes(List.of("https"))
+                .build();
+        final Tunnel tunnel = ngrokClientV3.connect(createTunnel);
+
+        // WHEN
+        final List<Tunnel> tunnels = ngrokClientV3.getTunnels();
+
+        // THEN
+        assertEquals(1, tunnels.size());
+        assertThat(tunnel.getPublicUrl(), startsWith("https://"));
+    }
+
+    @Test
+    public void testConnectSchemesHttpHttpsV3() {
+        // GIVEN
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+        final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V3)
+                .withSchemes(List.of("http", "https"))
+                .build();
+        final Tunnel tunnel = ngrokClientV3.connect(createTunnel);
+
+        // WHEN
+        final List<Tunnel> tunnels = ngrokClientV3.getTunnels();
+
+        // THEN
+        assertEquals(2, tunnels.size());
+        assertThat(tunnel.getPublicUrl(), startsWith("https://"));
+    }
+
+    @Test
+    public void testBindTlsUpgradedToSchemesV3() {
+        // GIVEN
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+        final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V3)
+                .withBindTls(BindTls.BOTH)
+                .build();
+        final Tunnel tunnel = ngrokClientV3.connect(createTunnel);
+
+        // WHEN
+        final List<Tunnel> tunnels = ngrokClientV3.getTunnels();
+
+        // THEN
+        assertEquals(2, tunnels.size());
+        assertThat(tunnel.getPublicUrl(), startsWith("https://"));
+    }
+
+    @Test
+    public void testDisconnectV2() {
+        // GIVEN
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+        final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V2)
+                .withName("my-tunnel")
+                .build();
+        final Tunnel tunnel = ngrokClientV2.connect(createTunnel);
+        assertTrue(ngrokClientV2.getNgrokProcess().isRunning());
+        final List<Tunnel> tunnels1 = ngrokClientV2.getTunnels();
+        assertEquals(2, tunnels1.size());
+
+        // WHEN
+        ngrokClientV2.disconnect(tunnel.getPublicUrl());
+
+        // THEN
+        final List<Tunnel> tunnels2 = ngrokClientV2.getTunnels();
+        assertEquals(1, tunnels2.size());
+    }
+
+    @Test
+    public void testDisconnectV3() {
+        // GIVEN
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+        final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V3)
+                .withName("my-tunnel")
+                .build();
+        final Tunnel tunnel = ngrokClientV3.connect(createTunnel);
+        assertTrue(ngrokClientV3.getNgrokProcess().isRunning());
+
+        // WHEN
+        ngrokClientV3.disconnect(tunnel.getPublicUrl());
+
+        // THEN
+        final List<Tunnel> tunnels = ngrokClientV3.getTunnels();
         assertEquals(0, tunnels.size());
+    }
+
+    @Test
+    public void testKill() {
+        // GIVEN
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+        final CreateTunnel createTunnel = new CreateTunnel.Builder().withName("my-tunnel").build();
+        ngrokClientV3.connect(createTunnel);
+
+        // WHEN
+        ngrokClientV3.kill();
+
+        // THEN
+        assertFalse(ngrokClientV3.getNgrokProcess().isRunning());
     }
 
     @Test
     public void testGetVersion() {
         // WHEN
-        final Version version = ngrokClient.getVersion();
+        final Version version = ngrokClientV3.getVersion();
 
         // THEN
         assertNotNull(version.getJavaNgrokVersion());
@@ -239,20 +388,54 @@ class NgrokClientTest extends NgrokTestCase {
     }
 
     @Test
-    public void testRegionalTcp() {
+    public void testRegionalTcpV2() {
+        final String subdomain = createUniqueSubdomain();
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
 
         // GIVEN
-        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfig)
+        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfigV2)
                 .withRegion(Region.AU)
                 .build();
-        ngrokProcess2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+        ngrokProcessV2_2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
         final NgrokClient ngrokClient2 = new NgrokClient.Builder()
                 .withJavaNgrokConfig(javaNgrokConfig2)
-                .withNgrokProcess(ngrokProcess2)
+                .withNgrokProcess(ngrokProcessV2_2)
                 .build();
         assertFalse(ngrokClient2.getNgrokProcess().isRunning());
         final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V2)
+                .withProto(Proto.TCP)
+                .withAddr(5000)
+                .withSubdomain(subdomain)
+                .build();
+
+        // WHEN
+        final Tunnel tunnel = ngrokClient2.connect(createTunnel);
+
+        // THEN
+        assertTrue(ngrokClient2.getNgrokProcess().isRunning());
+        assertNotNull(tunnel.getPublicUrl());
+        assertEquals("localhost:5000", tunnel.getConfig().getAddr());
+        assertThat(tunnel.getPublicUrl(), containsString("tcp://"));
+        assertThat(tunnel.getPublicUrl(), containsString(".au."));
+    }
+
+    @Test
+    public void testRegionalTcpV3() {
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+
+        // GIVEN
+        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfigV3)
+                .withRegion(Region.AU)
+                .build();
+        ngrokProcessV3_2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+        final NgrokClient ngrokClient2 = new NgrokClient.Builder()
+                .withJavaNgrokConfig(javaNgrokConfig2)
+                .withNgrokProcess(ngrokProcessV3_2)
+                .build();
+        assertFalse(ngrokClient2.getNgrokProcess().isRunning());
+        final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V3)
                 .withProto(Proto.TCP)
                 .withAddr(5000)
                 .build();
@@ -269,17 +452,67 @@ class NgrokClientTest extends NgrokTestCase {
     }
 
     @Test
+    public void testAuthV2() {
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+
+        // GIVEN
+        ngrokProcessV2_2 = new NgrokProcess(javaNgrokConfigV2, ngrokInstaller);
+        final NgrokClient ngrokClient2 = new NgrokClient.Builder()
+                .withJavaNgrokConfig(javaNgrokConfigV2)
+                .withNgrokProcess(ngrokProcessV2_2)
+                .build();
+        assertFalse(ngrokClient2.getNgrokProcess().isRunning());
+        final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V2)
+                .withAddr(5000)
+                .withAuth("username:password")
+                .build();
+
+        // WHEN
+        final Tunnel tunnel = ngrokClient2.connect(createTunnel);
+
+        // THEN
+        assertTrue(ngrokClient2.getNgrokProcess().isRunning());
+        assertNotNull(tunnel.getPublicUrl());
+    }
+
+    @Test
+    public void testAuthV3() {
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+
+        // GIVEN
+        ngrokProcessV3_2 = new NgrokProcess(javaNgrokConfigV3, ngrokInstaller);
+        final NgrokClient ngrokClient2 = new NgrokClient.Builder()
+                .withJavaNgrokConfig(javaNgrokConfigV3)
+                .withNgrokProcess(ngrokProcessV3_2)
+                .build();
+        assertFalse(ngrokClient2.getNgrokProcess().isRunning());
+        final CreateTunnel createTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V3)
+                .withAddr(5000)
+                .withAuth("username:password")
+                .build();
+
+        // WHEN
+        final Tunnel tunnel = ngrokClient2.connect(createTunnel);
+
+        // THEN
+        assertTrue(ngrokClient2.getNgrokProcess().isRunning());
+        assertNotNull(tunnel.getPublicUrl());
+    }
+
+    @Test
     public void testRegionalSubdomain() {
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
 
         // GIVEN
-        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfig)
+        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfigV3)
                 .withRegion(Region.AU)
                 .build();
-        ngrokProcess2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+        ngrokProcessV3_2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
         final NgrokClient ngrokClient2 = new NgrokClient.Builder()
                 .withJavaNgrokConfig(javaNgrokConfig2)
-                .withNgrokProcess(ngrokProcess2)
+                .withNgrokProcess(ngrokProcessV3_2)
                 .build();
         assertFalse(ngrokClient2.getNgrokProcess().isRunning());
         final String subdomain = createUniqueSubdomain();
@@ -293,7 +526,7 @@ class NgrokClientTest extends NgrokTestCase {
         // THEN
         assertTrue(ngrokClient2.getNgrokProcess().isRunning());
         assertNotNull(tunnel.getPublicUrl());
-        assertThat(tunnel.getPublicUrl(), containsString("http://"));
+        assertThat(tunnel.getPublicUrl(), containsString("https://"));
         assertThat(tunnel.getPublicUrl(), containsString(".au."));
         assertThat(tunnel.getPublicUrl(), containsString(subdomain));
     }
@@ -303,42 +536,42 @@ class NgrokClientTest extends NgrokTestCase {
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
 
         // GIVEN
-        assertFalse(ngrokClient.getNgrokProcess().isRunning());
+        assertFalse(ngrokClientV3.getNgrokProcess().isRunning());
         final CreateTunnel createTunnel = new CreateTunnel.Builder()
                 .withAddr("file:///")
                 .build();
 
         // WHEN
-        final Tunnel tunnel = ngrokClient.connect(createTunnel);
+        final Tunnel tunnel = ngrokClientV3.connect(createTunnel);
 
         // THEN
-        assertTrue(ngrokClient.getNgrokProcess().isRunning());
+        assertTrue(ngrokClientV3.getNgrokProcess().isRunning());
         assertThat(tunnel.getName(), startsWith("http-file-"));
-        assertEquals("http", tunnel.getProto());
+        assertEquals("https", tunnel.getProto());
         assertEquals("file:///", tunnel.getConfig().getAddr());
         assertNotNull(tunnel.getPublicUrl());
-        assertThat(tunnel.getPublicUrl(), startsWith("http://"));
+        assertThat(tunnel.getPublicUrl(), startsWith("https://"));
     }
 
     @Test
-    public void testDisconnectFileserver() throws InterruptedException {
+    public void testDisconnectFileserverV2() throws InterruptedException {
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
 
         // GIVEN
-        assertFalse(ngrokClient.getNgrokProcess().isRunning());
+        assertFalse(ngrokClientV2.getNgrokProcess().isRunning());
         final CreateTunnel createTunnel = new CreateTunnel.Builder()
                 .withAddr("file:///")
                 .build();
-        final String publicUrl = ngrokClient.connect(createTunnel).getPublicUrl();
+        final String publicUrl = ngrokClientV2.connect(createTunnel).getPublicUrl();
         Thread.sleep(1000);
 
         // WHEN
-        ngrokClient.disconnect(publicUrl);
+        ngrokClientV2.disconnect(publicUrl);
         Thread.sleep(1000);
-        final List<Tunnel> tunnels = ngrokClient.getTunnels();
+        final List<Tunnel> tunnels = ngrokClientV2.getTunnels();
 
         // THEN
-        assertTrue(ngrokClient.getNgrokProcess().isRunning());
+        assertTrue(ngrokClientV2.getNgrokProcess().isRunning());
         // There is still one tunnel left, as we only disconnected the http tunnel
         assertEquals(1, tunnels.size());
     }
@@ -348,16 +581,16 @@ class NgrokClientTest extends NgrokTestCase {
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
 
         // GIVEN
-        assertFalse(ngrokClient.getNgrokProcess().isRunning());
+        assertFalse(ngrokClientV3.getNgrokProcess().isRunning());
         final CreateTunnel createTunnel = new CreateTunnel.Builder()
                 .withAddr("file:///")
                 .build();
-        final Tunnel tunnel = ngrokClient.connect(createTunnel);
+        final Tunnel tunnel = ngrokClientV3.connect(createTunnel);
         Thread.sleep(1000);
-        final String apiUrl = ngrokClient.getNgrokProcess().getApiUrl();
+        final String apiUrl = ngrokClientV3.getNgrokProcess().getApiUrl();
 
         // WHEN
-        final Response<Tunnel> response = ngrokClient.getHttpClient().get(String.format("%s%s", apiUrl, tunnel.getUri()), Tunnel.class);
+        final Response<Tunnel> response = ngrokClientV3.getHttpClient().get(String.format("%s%s", apiUrl, tunnel.getUri()), Tunnel.class);
 
         // THEN
         assertEquals(tunnel.getName(), response.getBody().getName());
@@ -368,65 +601,64 @@ class NgrokClientTest extends NgrokTestCase {
     public void testRefreshMetrics() throws MalformedURLException, InterruptedException {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
-        ngrokClient.getNgrokProcess().start();
+        ngrokClientV3.getNgrokProcess().start();
         final CreateTunnel createTunnel = new CreateTunnel.Builder()
                 .withName("my-tunnel")
-                .withAddr(new URL(ngrokClient.getNgrokProcess().getApiUrl()).getPort())
+                .withAddr(new URL(ngrokClientV3.getNgrokProcess().getApiUrl()).getPort())
                 .withBindTls(true)
                 .build();
-        final Tunnel tunnel = ngrokClient.connect(createTunnel);
+        final Tunnel tunnel = ngrokClientV3.connect(createTunnel);
         Thread.sleep(1000);
         assertEquals(0, tunnel.getMetrics().get("http").getCount());
 
-        ngrokClient.getHttpClient().get(String.format("%s/status", tunnel.getPublicUrl()), Object.class);
+        ngrokClientV3.getHttpClient().get(String.format("%s/status", tunnel.getPublicUrl()), Object.class);
 
         Thread.sleep(3000);
 
-        ngrokClient.refreshMetrics(tunnel);
+        ngrokClientV3.refreshMetrics(tunnel);
 
         assertThat(tunnel.getMetrics().get("http").getCount(), greaterThan(0));
     }
 
     @Test
-    public void testTunnelDefinitions() {
+    public void testTunnelDefinitionsV2() {
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
 
         // GIVEN
         final String subdomain = createUniqueSubdomain();
-        final Map<String, Object> httpTunnelConfig = new HashMap<String, Object>() {{
-            put("proto", "http");
-            put("addr", "8000");
-            put("subdomain", subdomain);
-            put("inspect", Boolean.FALSE);
-            put("bind_tls", Boolean.TRUE);
-        }};
-        final Map<String, Object> tcpTunnelConfig = new HashMap<String, Object>() {{
-            put("proto", "tcp");
-            put("addr", "22");
-        }};
-        final Map<String, Object> tunnelsConfig = new HashMap<String, Object>() {{
-            put("http-tunnel", httpTunnelConfig);
-            put("tcp-tunnel", tcpTunnelConfig);
-        }};
-        final Map<String, Object> config = Collections.singletonMap("tunnels", tunnelsConfig);
+        final Map<String, Object> httpTunnelConfig = Map.of(
+                "proto", "http",
+                "addr", "8000",
+                "subdomain", subdomain,
+                "inspect", Boolean.FALSE,
+                "bind_tls", Boolean.TRUE);
+        final Map<String, Object> tcpTunnelConfig = Map.of(
+                "proto", "tcp",
+                "addr", "22");
+        final Map<String, Object> tunnelsConfig = Map.of(
+                "http-tunnel", httpTunnelConfig,
+                "tcp-tunnel", tcpTunnelConfig);
+        final Map<String, Object> config = Map.of("tunnels", tunnelsConfig);
 
-        final Path configPath2 = Paths.get(javaNgrokConfig.getConfigPath().getParent().toString(), "config2.yml");
-        ngrokInstaller.installDefaultConfig(configPath2, config);
-        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfig)
+        final Path configPath2 = Paths.get(javaNgrokConfigV2.getConfigPath().getParent().toString(), "config2.yml");
+        ngrokInstaller.installDefaultConfig(configPath2, config, javaNgrokConfigV2.getNgrokVersion());
+        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfigV2)
                 .withConfigPath(configPath2)
                 .build();
-        ngrokProcess2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+        ngrokProcessV2_2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
         final NgrokClient ngrokClient2 = new NgrokClient.Builder()
                 .withJavaNgrokConfig(javaNgrokConfig2)
-                .withNgrokProcess(ngrokProcess2)
+                .withNgrokProcess(ngrokProcessV2_2)
                 .build();
 
         // WHEN
         final CreateTunnel createHttpTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V2)
                 .withName("http-tunnel")
                 .build();
         final Tunnel httpTunnel = ngrokClient2.connect(createHttpTunnel);
         final CreateTunnel createSshTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V2)
                 .withName("tcp-tunnel")
                 .build();
         final Tunnel sshTunnel = ngrokClient2.connect(createSshTunnel);
@@ -437,6 +669,7 @@ class NgrokClientTest extends NgrokTestCase {
         assertEquals("http-tunnel", httpTunnel.getName());
         assertEquals("http://localhost:8000", httpTunnel.getConfig().getAddr());
         assertEquals("https", httpTunnel.getProto());
+        assertFalse(httpTunnel.getConfig().isInspect());
         assertEquals(String.format("https://%s.ngrok.io", subdomain), httpTunnel.getPublicUrl());
         assertEquals("tcp-tunnel", sshTunnel.getName());
         assertEquals("localhost:22", sshTunnel.getConfig().getAddr());
@@ -445,28 +678,235 @@ class NgrokClientTest extends NgrokTestCase {
     }
 
     @Test
+    public void testTunnelDefinitionsV3() {
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+
+        // GIVEN
+        final String subdomain = createUniqueSubdomain();
+        final Map<String, Object> httpTunnelConfig = Map.of(
+                "proto", "http",
+                "addr", "8000",
+                "subdomain", subdomain,
+                "inspect", Boolean.FALSE,
+                "schemes", List.of("http"),
+                "circuit_breaker", 0.5f);
+        final Map<String, Object> tcpTunnelConfig = Map.of(
+                "proto", "tcp",
+                "addr", "22");
+        final Map<String, Object> tunnelsConfig = Map.of(
+                "http-tunnel", httpTunnelConfig,
+                "tcp-tunnel", tcpTunnelConfig);
+        final Map<String, Object> config = Map.of("tunnels", tunnelsConfig);
+
+        final Path configPath2 = Paths.get(javaNgrokConfigV3.getConfigPath().getParent().toString(), "config2.yml");
+        ngrokInstaller.installDefaultConfig(configPath2, config, javaNgrokConfigV3.getNgrokVersion());
+        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfigV3)
+                .withConfigPath(configPath2)
+                .build();
+        ngrokProcessV3_2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+        final NgrokClient ngrokClient2 = new NgrokClient.Builder()
+                .withJavaNgrokConfig(javaNgrokConfig2)
+                .withNgrokProcess(ngrokProcessV3_2)
+                .build();
+
+        // WHEN
+        final CreateTunnel createHttpTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V3)
+                .withName("http-tunnel")
+                .build();
+        final Tunnel httpTunnel = ngrokClient2.connect(createHttpTunnel);
+        final CreateTunnel createSshTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V3)
+                .withName("tcp-tunnel")
+                .build();
+        final Tunnel sshTunnel = ngrokClient2.connect(createSshTunnel);
+        final List<Tunnel> tunnels = ngrokClient2.getTunnels();
+
+        // THEN
+        assertEquals(2, tunnels.size());
+        assertEquals("http-tunnel", httpTunnel.getName());
+        assertEquals("http://localhost:8000", httpTunnel.getConfig().getAddr());
+        assertEquals("http", httpTunnel.getProto());
+        assertFalse(httpTunnel.getConfig().isInspect());
+        assertEquals(String.format("http://%s.ngrok.io", subdomain), httpTunnel.getPublicUrl());
+        assertEquals("tcp-tunnel", sshTunnel.getName());
+        assertEquals("localhost:22", sshTunnel.getConfig().getAddr());
+        assertEquals("tcp", sshTunnel.getProto());
+        assertThat(sshTunnel.getPublicUrl(), startsWith("tcp://"));
+    }
+
+    @Test
+    public void testTunnelDefinitionsV3CloudEdge() {
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+        final String ngrokHttpEdge = System.getenv("NGROK_HTTP_EDGE");
+        assumeTrue(isNotBlank(System.getenv("NGROK_HTTP_EDGE")), "NGROK_HTTP_EDGE environment variable not set");
+        final String ngrokTcpEdge = System.getenv("NGROK_TCP_EDGE");
+        assumeTrue(isNotBlank(System.getenv("NGROK_TCP_EDGE")), "NGROK_TCP_EDGE environment variable not set");
+        final String ngrokApiKey = System.getenv("NGROK_API_KEY");
+        assumeTrue(isNotBlank(System.getenv("NGROK_API_KEY")), "NGROK_API_KEY environment variable not set");
+        final String ngrokHttpEdgeEndpoint = System.getenv("NGROK_HTTP_EDGE_ENDPOINT");
+        assumeTrue(isNotBlank(System.getenv("NGROK_HTTP_EDGE_ENDPOINT")), "NGROK_HTTP_EDGE_ENDPOINT environment variable not set");
+        final String ngrokTcpEdgeEndpoint = System.getenv("NGROK_TCP_EDGE_ENDPOINT");
+        assumeTrue(isNotBlank(System.getenv("NGROK_TCP_EDGE_ENDPOINT")), "NGROK_TCP_EDGE_ENDPOINT environment variable not set");
+
+        // GIVEN
+        final Map<String, Object> edgeHttpTunnelConfig = Map.of(
+                "addr", "80",
+                "labels", List.of(String.format("edge=%s", ngrokHttpEdge)));
+        final Map<String, Object> edgeTcpTunnelConfig = Map.of(
+                "addr", "22",
+                "labels", List.of(String.format("edge=%s", ngrokTcpEdge)));
+        final Map<String, Object> tunnelsConfig = Map.of(
+                "edge-http-tunnel", edgeHttpTunnelConfig,
+                "edge-tcp-tunnel", edgeTcpTunnelConfig);
+        final Map<String, Object> config = Map.of("tunnels", tunnelsConfig);
+
+        final Path configPath2 = Paths.get(javaNgrokConfigV3.getConfigPath().getParent().toString(), "config2.yml");
+        ngrokInstaller.installDefaultConfig(configPath2, config, javaNgrokConfigV3.getNgrokVersion());
+        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfigV3)
+                .withConfigPath(configPath2)
+                .withApiKey(ngrokApiKey)
+                .build();
+        ngrokProcessV3_2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+        final NgrokClient ngrokClient2 = new NgrokClient.Builder()
+                .withJavaNgrokConfig(javaNgrokConfig2)
+                .withNgrokProcess(ngrokProcessV3_2)
+                .build();
+
+        // WHEN
+        final CreateTunnel createHttpEdgeTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V3)
+                .withName("edge-http-tunnel")
+                .build();
+        final CreateTunnel createTcpEdgeTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V3)
+                .withName("edge-tcp-tunnel")
+                .build();
+        final Tunnel httpEdgeTunnel = ngrokClient2.connect(createHttpEdgeTunnel);
+        final Tunnel tcpEdgeTunnel = ngrokClient2.connect(createTcpEdgeTunnel);
+        final List<Tunnel> tunnels = ngrokClient2.getTunnels();
+        tunnels.sort(Comparator.comparing(Tunnel::getProto));
+
+        // THEN
+        assertEquals("edge-http-tunnel", httpEdgeTunnel.getName());
+        assertEquals("http://localhost:80", httpEdgeTunnel.getConfig().getAddr());
+        assertEquals("https", httpEdgeTunnel.getProto());
+        assertEquals(ngrokHttpEdgeEndpoint, httpEdgeTunnel.getPublicUrl());
+        assertEquals("edge-tcp-tunnel", tcpEdgeTunnel.getName());
+        assertEquals("tcp://localhost:22", tcpEdgeTunnel.getConfig().getAddr());
+        assertEquals("tcp", tcpEdgeTunnel.getProto());
+        assertEquals(ngrokTcpEdgeEndpoint, tcpEdgeTunnel.getPublicUrl());
+        assertEquals(2, tunnels.size());
+        assertEquals("edge-http-tunnel", tunnels.get(0).getName());
+        assertEquals("http://localhost:80", tunnels.get(0).getConfig().getAddr());
+        assertEquals("https", tunnels.get(0).getProto());
+        assertEquals(ngrokHttpEdgeEndpoint, tunnels.get(0).getPublicUrl());
+        assertEquals("edge-tcp-tunnel", tunnels.get(1).getName());
+        assertEquals("tcp://localhost:22", tunnels.get(1).getConfig().getAddr());
+        assertEquals("tcp", tunnels.get(1).getProto());
+        assertEquals(ngrokTcpEdgeEndpoint, tunnels.get(1).getPublicUrl());
+    }
+
+    @Test
+    public void testLabelsNoApiKeyFails() {
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+        final String ngrokHttpEdge = System.getenv("NGROK_HTTP_EDGE");
+        assumeTrue(isNotBlank(System.getenv("NGROK_HTTP_EDGE")), "NGROK_HTTP_EDGE environment variable not set");
+
+        // GIVEN
+        final Map<String, Object> edgeHttpTunnelConfig = Map.of(
+                "addr", "80",
+                "labels", List.of(String.format("edge=%s", ngrokHttpEdge)));
+        final Map<String, Object> tunnelsConfig = Map.of(
+                "edge-tunnel", edgeHttpTunnelConfig);
+        final Map<String, Object> config = Map.of("tunnels", tunnelsConfig);
+
+        final Path configPath2 = Paths.get(javaNgrokConfigV3.getConfigPath().getParent().toString(), "config2.yml");
+        ngrokInstaller.installDefaultConfig(configPath2, config, javaNgrokConfigV3.getNgrokVersion());
+        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfigV3)
+                .withConfigPath(configPath2)
+                .build();
+        ngrokProcessV3_2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+        final NgrokClient ngrokClient2 = new NgrokClient.Builder()
+                .withJavaNgrokConfig(javaNgrokConfig2)
+                .withNgrokProcess(ngrokProcessV3_2)
+                .build();
+
+        // WHEN
+        final CreateTunnel createEdgeTunnel = new CreateTunnel.Builder()
+                .withNgrokVersion(NgrokVersion.V3)
+                .withName("edge-tunnel")
+                .build();
+        assertThrows(JavaNgrokException.class, () -> ngrokClient2.connect(createEdgeTunnel));
+    }
+
+    @Test
+    public void testTunnelDefinitionsV3OAuth() {
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+
+        // GIVEN
+        final String subdomain = createUniqueSubdomain();
+        final Map<String, Object> httpTunnelConfig = Map.of(
+                "proto", "http",
+                "addr", "8000",
+                "subdomain", subdomain,
+                "oauth", Map.of(
+                        "provider", "google",
+                        "allow_domains", List.of("pyngrok.com"),
+                        "allow_emails", List.of("email@pyngrok.com")
+                ));
+        final Map<String, Object> tunnelsConfig = Map.of(
+                "http-tunnel", httpTunnelConfig);
+        final Map<String, Object> config = Map.of("tunnels", tunnelsConfig);
+
+        final Path configPath2 = Paths.get(javaNgrokConfigV3.getConfigPath().getParent().toString(), "config2.yml");
+        ngrokInstaller.installDefaultConfig(configPath2, config, javaNgrokConfigV3.getNgrokVersion());
+        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfigV3)
+                .withConfigPath(configPath2)
+                .build();
+        ngrokProcessV3_2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+        final NgrokClient ngrokClient2 = new NgrokClient.Builder()
+                .withJavaNgrokConfig(javaNgrokConfig2)
+                .withNgrokProcess(ngrokProcessV3_2)
+                .build();
+
+        // WHEN
+        final CreateTunnel createHttpTunnel = new CreateTunnel.Builder()
+                .withName("http-tunnel")
+                .build();
+        final Tunnel httpTunnel = ngrokClient2.connect(createHttpTunnel);
+        final List<Tunnel> tunnels = ngrokClient2.getTunnels();
+
+        final Response<Object> response = ngrokClientV3.getHttpClient().get(String.format(httpTunnel.getPublicUrl()), Object.class);
+
+        // THEN
+        assertEquals(1, tunnels.size());
+        assertEquals("http-tunnel", httpTunnel.getName());
+        assertEquals("http://localhost:8000", httpTunnel.getConfig().getAddr());
+        assertEquals("https", httpTunnel.getProto());
+        assertEquals(String.format("https://%s.ngrok.io", subdomain), httpTunnel.getPublicUrl());
+        assertTrue(response.getBodyRaw().contains("Sign in - Google Accounts"));
+    }
+
+    @Test
     public void testTunnelDefinitionsJavaNgrokDefaultWithOverrides() {
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
 
         // GIVEN
         final String subdomain1 = createUniqueSubdomain();
-        final Map<String, Object> defaultTunnelConfig = new HashMap<String, Object>() {{
-            put("proto", "http");
-            put("addr", "8080");
-            put("subdomain", subdomain1);
-        }};
-        final Map<String, Object> tunnelsConfig = Collections.singletonMap("java-ngrok-default", defaultTunnelConfig);
-        final Map<String, Object> config = Collections.singletonMap("tunnels", tunnelsConfig);
+        final Map<String, Object> defaultTunnelConfig = Map.of("proto", "http", "addr", "8080", "subdomain", subdomain1);
+        final Map<String, Object> tunnelsConfig = Map.of("java-ngrok-default", defaultTunnelConfig);
+        final Map<String, Object> config = Map.of("tunnels", tunnelsConfig);
 
-        final Path configPath2 = Paths.get(javaNgrokConfig.getConfigPath().getParent().toString(), "config2.yml");
-        ngrokInstaller.installDefaultConfig(configPath2, config);
-        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfig)
+        final Path configPath2 = Paths.get(javaNgrokConfigV3.getConfigPath().getParent().toString(), "config2.yml");
+        ngrokInstaller.installDefaultConfig(configPath2, config, javaNgrokConfigV3.getNgrokVersion());
+        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfigV3)
                 .withConfigPath(configPath2)
                 .build();
-        ngrokProcess2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+        ngrokProcessV3_2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
         final NgrokClient ngrokClient2 = new NgrokClient.Builder()
                 .withJavaNgrokConfig(javaNgrokConfig2)
-                .withNgrokProcess(ngrokProcess2)
+                .withNgrokProcess(ngrokProcessV3_2)
                 .build();
 
         // WHEN
@@ -479,23 +919,44 @@ class NgrokClientTest extends NgrokTestCase {
         final Tunnel ngrokTunnel2 = ngrokClient2.connect(createTunnelSubdomain);
 
         // THEN
-        assertEquals("java-ngrok-default (http)", ngrokTunnel1.getName());
+        assertEquals("java-ngrok-default", ngrokTunnel1.getName());
         assertEquals("http://localhost:8080", ngrokTunnel1.getConfig().getAddr());
-        assertEquals(Proto.HTTP.toString(), ngrokTunnel1.getProto());
-        assertEquals(String.format("http://%s.ngrok.io", subdomain1), ngrokTunnel1.getPublicUrl());
-        assertEquals("java-ngrok-default (http)", ngrokTunnel2.getName());
+        assertEquals("https", ngrokTunnel1.getProto());
+        assertEquals(String.format("https://%s.ngrok.io", subdomain1), ngrokTunnel1.getPublicUrl());
+        assertEquals("java-ngrok-default", ngrokTunnel2.getName());
         assertEquals("http://localhost:5000", ngrokTunnel2.getConfig().getAddr());
-        assertEquals(Proto.HTTP.toString(), ngrokTunnel2.getProto());
-        assertEquals(String.format("http://%s.ngrok.io", subdomain2), ngrokTunnel2.getPublicUrl());
+        assertEquals("https", ngrokTunnel2.getProto());
+        assertEquals(String.format("https://%s.ngrok.io", subdomain2), ngrokTunnel2.getPublicUrl());
     }
 
     @Test
-    public void testSetAuthToken() throws IOException {
+    public void testSetAuthTokenV2() throws IOException {
         // WHEN
-        ngrokClient.setAuthToken("807ad30a-73be-48d8");
-        final String contents = Files.lines(javaNgrokConfig.getConfigPath()).collect(Collectors.joining("\n"));
+        ngrokClientV2.setAuthToken("807ad30a-73be-48d8");
+        final String contents = Files.readString(javaNgrokConfigV2.getConfigPath());
 
         // THEN
         assertThat(contents, containsString("807ad30a-73be-48d8"));
+        assertFalse(ngrokClientV2.getNgrokProcess().isRunning());
+    }
+
+    @Test
+    public void testSetAuthTokenV3() throws IOException {
+        // WHEN
+        ngrokClientV3.setAuthToken("807ad30a-73be-48d8");
+        final String contents = Files.readString(javaNgrokConfigV3.getConfigPath());
+
+        // THEN
+        assertThat(contents, containsString("807ad30a-73be-48d8"));
+        assertFalse(ngrokClientV3.getNgrokProcess().isRunning());
+    }
+
+    @Test
+    public void testUpdate() {
+        // WHEN
+        ngrokClientV3.update();
+
+        // THEN
+        assertFalse(ngrokClientV3.getNgrokProcess().isRunning());
     }
 }
