@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021 Alex Laird
+ * Copyright (c) 2023 Alex Laird
  *
  * Permission is hereby granted, free of charge, to any person obtaining
  * a copy of this software and associated documentation files (the
@@ -34,7 +34,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Collections;
+import java.util.Map;
 import java.util.function.Function;
 
 import static com.github.alexdlaird.ngrok.installer.NgrokInstaller.WINDOWS;
@@ -57,29 +57,42 @@ public class NgrokProcessTest extends NgrokTestCase {
     public void testStart() {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
-        assertFalse(ngrokProcess.isRunning());
+        assertFalse(ngrokProcessV3.isRunning());
 
         // WHEN
-        ngrokProcess.start();
+        ngrokProcessV3.start();
 
         // THEN
-        assertTrue(ngrokProcess.isRunning());
+        assertTrue(ngrokProcessV3.isRunning());
     }
 
     @Test
-    public void testStartPortInUse() throws InterruptedException {
+    public void testStop() {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
-        assertFalse(ngrokProcess.isRunning());
-        ngrokProcess.start();
-        assertTrue(ngrokProcess.isRunning());
-        final Path ngrokPath2 = Paths.get(javaNgrokConfig.getNgrokPath().getParent().toString(), "2", NgrokInstaller.getNgrokBin());
-        final Path configPath2 = Paths.get(javaNgrokConfig.getConfigPath().getParent().toString(), "config2.yml");
-        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfig)
+        ngrokProcessV3.start();
+
+        // WHEN
+        ngrokProcessV3.stop();
+
+        // THEN
+        assertFalse(ngrokProcessV3.isRunning());
+    }
+
+    @Test
+    public void testStartPortInUseV2() throws InterruptedException {
+        // GIVEN
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+        assertFalse(ngrokProcessV2.isRunning());
+        ngrokProcessV2.start();
+        assertTrue(ngrokProcessV2.isRunning());
+        final Path ngrokPath2 = Paths.get(javaNgrokConfigV2.getNgrokPath().getParent().toString(), "2", NgrokInstaller.getNgrokBin());
+        final Path configPath2 = Paths.get(javaNgrokConfigV2.getConfigPath().getParent().toString(), "config2.yml");
+        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfigV2)
                 .withNgrokPath(ngrokPath2)
                 .withConfigPath(configPath2)
                 .build();
-        ngrokInstaller.installDefaultConfig(javaNgrokConfig2.getConfigPath(), Collections.singletonMap("web_addr", ngrokProcess.getApiUrl().substring(7)));
+        ngrokInstaller.installDefaultConfig(javaNgrokConfig2.getConfigPath(), Map.of("web_addr", ngrokProcessV2.getApiUrl().substring(7)), javaNgrokConfig2.getNgrokVersion());
 
         // WHEN
         NgrokException exception = null;
@@ -87,8 +100,8 @@ public class NgrokProcessTest extends NgrokTestCase {
         for (int i = 0; isNull(error) && i < 10; ++i) {
             Thread.sleep(1000);
 
-            ngrokProcess2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
-            exception = assertThrows(NgrokException.class, ngrokProcess2::start);
+            ngrokProcessV2_2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+            exception = assertThrows(NgrokException.class, ngrokProcessV2_2::start);
             error = exception.getNgrokError();
         }
 
@@ -103,46 +116,132 @@ public class NgrokProcessTest extends NgrokTestCase {
             assertThat(exception.getNgrokError(), containsString("bind: address already in use"));
         }
         assertThat(exception.getNgrokLogs().size(), greaterThan(0));
-        assertFalse(ngrokProcess2.isRunning());
+        assertFalse(ngrokProcessV2_2.isRunning());
     }
 
     @Test
-    public void testMultipleProcessesDifferentBinaries() {
+    public void testStartPortInUseV3() throws InterruptedException {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
-        ngrokInstaller.installDefaultConfig(javaNgrokConfig.getConfigPath(), Collections.singletonMap("web_addr", "localhost:4040"));
-        final Path ngrokPath2 = Paths.get(javaNgrokConfig.getNgrokPath().getParent().toString(), "2", NgrokInstaller.getNgrokBin());
-        final Path configPath2 = Paths.get(javaNgrokConfig.getConfigPath().getParent().toString(), "config2.yml");
-        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfig)
+        assertFalse(ngrokProcessV3.isRunning());
+        ngrokProcessV3.start();
+        assertTrue(ngrokProcessV3.isRunning());
+        final Path ngrokPath2 = Paths.get(javaNgrokConfigV3.getNgrokPath().getParent().toString(), "2", NgrokInstaller.getNgrokBin());
+        final Path configPath2 = Paths.get(javaNgrokConfigV3.getConfigPath().getParent().toString(), "config2.yml");
+        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfigV3)
                 .withNgrokPath(ngrokPath2)
                 .withConfigPath(configPath2)
                 .build();
-        ngrokInstaller.installDefaultConfig(javaNgrokConfig2.getConfigPath(), Collections.singletonMap("web_addr", "localhost:4041"));
-        ngrokProcess2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+        ngrokInstaller.installDefaultConfig(javaNgrokConfig2.getConfigPath(), Map.of("web_addr", ngrokProcessV3.getApiUrl().substring(7)), javaNgrokConfigV3.getNgrokVersion());
 
         // WHEN
-        ngrokProcess.start();
-        ngrokProcess2.start();
+        NgrokException exception = null;
+        String error = null;
+        for (int i = 0; isNull(error) && i < 10; ++i) {
+            Thread.sleep(1000);
+
+            ngrokProcessV3_2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+            exception = assertThrows(NgrokException.class, ngrokProcessV3_2::start);
+            error = exception.getNgrokError();
+        }
 
         // THEN
-        assertTrue(ngrokProcess.isRunning());
-        assertEquals("http://localhost:4040", ngrokProcess.getApiUrl());
-        assertTrue(ngrokProcess2.isRunning());
-        assertEquals("http://localhost:4041", ngrokProcess2.getApiUrl());
+        assertNotNull(exception);
+        assertNotNull(error);
+        if (NgrokInstaller.getSystem().equals(WINDOWS)) {
+            assertThat(exception.getMessage(), containsString("bind: Only one usage of each socket address"));
+            assertThat(exception.getNgrokError(), containsString("bind: Only one usage of each socket address"));
+        } else {
+            assertThat(exception.getMessage(), containsString("bind: address already in use"));
+            assertThat(exception.getNgrokError(), containsString("bind: address already in use"));
+        }
+        assertThat(exception.getNgrokLogs().size(), greaterThan(0));
+        assertFalse(ngrokProcessV3_2.isRunning());
+    }
+
+    @Test
+    public void testExternalKill() throws InterruptedException {
+        // GIVEN
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+        ngrokProcessV3.start();
+        assertTrue(ngrokProcessV3.isRunning());
+
+        // WHEN
+        final ProcessHandle processHandle = ProcessHandle.allProcesses()
+                .filter(p -> p.info().command().orElse("").contains(javaNgrokConfigV3.getNgrokPath().toString()))
+                .findFirst().orElse(null);
+
+        // THEN
+        assertNotNull(processHandle);
+        processHandle.destroy();
+        long timeoutTime = System.currentTimeMillis() + 10 * 1000;
+        while (processHandle.isAlive() && ngrokProcessV3.isRunning() && System.currentTimeMillis() < timeoutTime) {
+            Thread.sleep(50);
+        }
+        assertFalse(processHandle.isAlive());
+        assertFalse(ngrokProcessV3.isRunning());
+
+        // THEN test we can successfully restart the process
+        ngrokProcessV3.start();
+        assertTrue(ngrokProcessV3.isRunning());
+    }
+
+    @Test
+    public void testMultipleProcessesDifferentBinariesV2() {
+        // GIVEN
+        assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
+        ngrokInstaller.installDefaultConfig(javaNgrokConfigV2.getConfigPath(), Map.of("web_addr", "localhost:4040"), javaNgrokConfigV2.getNgrokVersion());
+        final Path ngrokPathV2_2 = Paths.get(javaNgrokConfigV2.getNgrokPath().getParent().toString(), "2", NgrokInstaller.getNgrokBin());
+        final Path configPathV2_2 = Paths.get(javaNgrokConfigV2.getConfigPath().getParent().toString(), "configV2_2.yml");
+        final JavaNgrokConfig javaNgrokConfigV2_2 = new JavaNgrokConfig.Builder(javaNgrokConfigV2)
+                .withNgrokPath(ngrokPathV2_2)
+                .withConfigPath(configPathV2_2)
+                .build();
+        ngrokInstaller.installDefaultConfig(javaNgrokConfigV2_2.getConfigPath(), Map.of("web_addr", "localhost:4041"), javaNgrokConfigV2.getNgrokVersion());
+        ngrokProcessV2_2 = new NgrokProcess(javaNgrokConfigV2_2, ngrokInstaller);
+
+        ngrokInstaller.installDefaultConfig(javaNgrokConfigV3.getConfigPath(), Map.of("web_addr", "localhost:4042"), javaNgrokConfigV3.getNgrokVersion());
+        final Path ngrokPath2 = Paths.get(javaNgrokConfigV3.getNgrokPath().getParent().toString(), "2", NgrokInstaller.getNgrokBin());
+        final Path configPath2 = Paths.get(javaNgrokConfigV3.getConfigPath().getParent().toString(), "configV3_2.yml");
+        final JavaNgrokConfig javaNgrokConfigV3_2 = new JavaNgrokConfig.Builder(javaNgrokConfigV3)
+                .withNgrokPath(ngrokPath2)
+                .withConfigPath(configPath2)
+                .build();
+        ngrokInstaller.installDefaultConfig(javaNgrokConfigV3_2.getConfigPath(), Map.of("web_addr", "localhost:4043"), javaNgrokConfigV3.getNgrokVersion());
+        ngrokProcessV3_2 = new NgrokProcess(javaNgrokConfigV3_2, ngrokInstaller);
+
+        // WHEN
+        ngrokProcessV2.start();
+        ngrokProcessV2_2.start();
+        ngrokProcessV3.start();
+        ngrokProcessV3_2.start();
+
+        // THEN
+        assertTrue(ngrokProcessV2.isRunning());
+        assertEquals("http://localhost:4040", ngrokProcessV2.getApiUrl());
+        assertTrue(ngrokProcessV2_2.isRunning());
+        assertEquals("http://localhost:4041", ngrokProcessV2_2.getApiUrl());
+        assertTrue(ngrokProcessV3.isRunning());
+        assertEquals("http://localhost:4042", ngrokProcessV3.getApiUrl());
+        assertTrue(ngrokProcessV3_2.isRunning());
+        assertEquals("http://localhost:4043", ngrokProcessV3_2.getApiUrl());
     }
 
     @Test
     public void testProcessLogs() {
         // WHEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
-        ngrokProcess.start();
+        ngrokProcessV3.start();
 
         // THEN
-        for (final NgrokLog log : ngrokProcess.getProcessMonitor().getLogs()) {
+        int i = 0;
+        for (final NgrokLog log : ngrokProcessV3.getProcessMonitor().getLogs()) {
             assertNotNull(log.getT());
             assertNotNull(log.getLvl());
             assertNotNull(log.getMsg());
+            ++i;
         }
+        assertTrue(i > 0);
     }
 
     @Test
@@ -150,55 +249,56 @@ public class NgrokProcessTest extends NgrokTestCase {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
         final Function<NgrokLog, Void> logEventCallbackMock = mock(Function.class);
-        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfig)
+        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfigV3)
                 .withLogEventCallback(logEventCallbackMock)
                 .withMaxLogs(5)
                 .build();
-        ngrokProcess2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+        ngrokProcessV3_2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
 
         // WHEN
-        ngrokProcess2.start();
+        ngrokProcessV3_2.start();
         Thread.sleep(1000);
 
         // THEN
-        assertThat(Mockito.mockingDetails(logEventCallbackMock).getInvocations().size(), greaterThan(ngrokProcess2.getProcessMonitor().getLogs().size()));
-        assertEquals(5, ngrokProcess2.getProcessMonitor().getLogs().size());
+        assertThat(Mockito.mockingDetails(logEventCallbackMock).getInvocations().size(), greaterThan(ngrokProcessV3_2.getProcessMonitor().getLogs().size()));
+        assertEquals(5, ngrokProcessV3_2.getProcessMonitor().getLogs().size());
     }
 
     @Test
-    public void testNoMonitorThread() {
+    public void testNoMonitorThread() throws InterruptedException {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
-        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfig)
+        final JavaNgrokConfig javaNgrokConfig2 = new JavaNgrokConfig.Builder(javaNgrokConfigV3)
                 .withoutMonitoring()
                 .build();
-        ngrokProcess2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
+        ngrokProcessV3_2 = new NgrokProcess(javaNgrokConfig2, ngrokInstaller);
 
         // WHEN
-        ngrokProcess2.start();
+        ngrokProcessV3_2.start();
+        Thread.sleep(1000);
 
         // THEN
-        assertTrue(ngrokProcess2.isRunning());
-        assertFalse(ngrokProcess2.getProcessMonitor().isMonitoring());
+        assertTrue(ngrokProcessV3_2.isRunning());
+        assertFalse(ngrokProcessV3_2.getProcessMonitor().isMonitoring());
     }
 
     @Test
-    public void testStartNoBinary() throws IOException, InterruptedException {
+    public void testStartProcessNoBinary() throws IOException, InterruptedException {
         // Due to Windows file locking behavior, wait a beat
         if (NgrokInstaller.getSystem().equals(WINDOWS)) {
             Thread.sleep(1000);
         }
 
         // GIVEN
-        if (Files.exists(javaNgrokConfig.getNgrokPath())) {
-            Files.delete(javaNgrokConfig.getNgrokPath());
+        if (Files.exists(javaNgrokConfigV3.getNgrokPath())) {
+            Files.delete(javaNgrokConfigV3.getNgrokPath());
         }
 
         // WHEN
-        final NgrokException exception = assertThrows(NgrokException.class, ngrokProcess::start);
+        final NgrokException exception = assertThrows(NgrokException.class, ngrokProcessV3::start);
 
         // THEN
         assertThat(exception.getMessage(), containsString("ngrok binary was not found"));
-        assertFalse(ngrokProcess.isRunning());
+        assertFalse(ngrokProcessV3.isRunning());
     }
 }
